tools/elk/elastic/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: kc-elk
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: elastic.by.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-master
            port:
              number: 9200
